syntax = "proto3";

package spatialcmc;

message PoissonState {
    double rate = 1;
}